[tool.poetry]
name = "cloudlydb-testing"
version = "0.1.0"
description = ""
authors = ["Nana Duah <gabano2005@gmail.com>"]
packages = [
    { include = "pytest.py", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.34.7"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
