[tool.poetry]
name = "cloudlytesting"
version = "0.1.1"
description = ""
authors = ["Nana Duah <gabano2005@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.34.7"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
